--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                                                                                                                                                                                                                            
+                                                                                                                                                                                                                                                                
+    
     
     
     
@@ -62,7 +63,8 @@
     
     
     <wb-module deploy-name="Acme-ANS-D01">
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+        
         
         
         
@@ -124,7 +126,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+        
         
         
         
@@ -186,7 +189,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                                                                                                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                                                                                                                                                                                
+        
         
         
         
@@ -235,7 +239,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                                                                                                
+                                                                                                                                                        
+        
         
         
         
@@ -253,7 +258,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
-                                                                                                                
+                                                                                                                        
+        
         
         
         
@@ -267,13 +273,15 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                
+                                                        
+        
         
         
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+        
         
         
         
@@ -335,9 +343,9 @@
         
         
         <property name="java-output-path" value="/Hello-World-22.0/target/classes"/>
-                
-        <property name="context-root" value="Acme-Airport-D01"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
+        <property name="context-root" value="Acme-ANS"/>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
+    
     
     
     
@@ -400,7 +408,8 @@
     
     
     </wb-module>
-                                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                            
+
 
 
 
